unified internship handbook link and page breaks

--- a/franske-course-information/modules/itc-2189/pages/index.adoc
+++ b/franske-course-information/modules/itc-2189/pages/index.adoc
@@ -9,4 +9,6 @@ You are responsible for reading and understanding all of the internship course h
 * xref:guidelines-policies.adoc[Guidelines and Policies]
 * xref:syllabus.adoc[Syllabus]
 
+All of these can be viewed as a xref:unified-handbook.adoc[single handbook document] for saving/printing.
+
 include::program-info:ROOT:partial$stdfooter.adoc[]
