--- a/franske-course-information/modules/itc-2621/pages/assignments.adoc
+++ b/franske-course-information/modules/itc-2621/pages/assignments.adoc
@@ -77,6 +77,7 @@ You must do one of the following choices at least once a week (up to 10 points e
 
 * Meet with the instructor online Tuesdays 6:00-8:30pm to discuss course progress and ask questions. *Note that due to the tutorial nature of this class in Spring 2024 you must send an email by noon on Tuesday if you want to meet along with the specific time you want to meet. I will not be on Zoom waiting for people to meet*.
 * Meet with the instructor at another time during the week scheduled in advance. This meeting must take place _before_ Tuesday at 8:30pm and _after_ the previous Tuesday at 8:30pm to receive credit for meeting in a given week. *Availability is not guaranteed so you should schedule this early.*
+* Submit an online course progress evaluation by filling out the form provided by your instructor on the Netacad website for the correct date.
 * Submit a written statement on your progress in the course by email. You must meet the following requirements with your statement:
 ** The instructor may revoke this option at any time. You will be notified by email or verbally if this option is no longer possible in which case you must use one of the other options until notified otherwise.
 ** It must be emailed to ben@ihitc.net
