--- a/franske-course-information/modules/itc-2480/pages/assignments.adoc
+++ b/franske-course-information/modules/itc-2480/pages/assignments.adoc
@@ -4,6 +4,21 @@ This page is organized into sections based on the category of your final grade t
 == Lab Assignments
 You are responsible for completing ALL of these labs. You must submit a lab report (click for details about how to write these) for each topic (except topics 13/14 which have a combined report). Each lab report is worth up to 20 points.
 
+* xref:lab1.adoc[Lab 1: Linux Installation and First Steps]
+* xref:lab2.adoc[Lab 2: Command Line Basics, Filesystem Navigation, and Package Management]
+* xref:lab3.adoc[Lab 3: User Accounts and Permissions]
+* xref:lab4.adoc[Lab 4: Text Manipulation]
+* xref:lab5.adoc[Lab 5: Webserver and PHP Installation and Use]
+* xref:lab6.adoc[Lab 6: SQL Databases and Web Applications]
+* xref:lab7.adoc[Lab 7: Firewall COnfiguration and System Security]
+* xref:lab8.adoc[Lab 8: Linux SYstem Administration Utilities]
+* xref:lab9.adoc[Lab 9: DNS Server Installation and Configuration]
+* xref:lab10.adoc[Lab 10: An Introduction to Containers]
+* xref:lab11.adoc[Lab 11: Practical Applications of Containers]
+* xref:lab12.adoc[Lab 12: Filesystem Management and Hardware Utilities]
+* xref:lab13.adoc[Lab 13: BASH Scripting]
+* xref:lab14.adoc[Lab 14: Python Scripting for System Administration]
+
 == Homework, Activities & Participation 
 * Participate in an online forum discussion (typically 3 quality posts or more) of each topic on the ITC CLASS site. See forum posting page for details. (up to 10 points each chapter based on quality)
 * Weekly Progress Self-Evaluation - Complete on the ITC CLASS Server Website (10 points possible each week)
