--- a/franske-course-information/modules/itc-2480/pages/lab1.adoc
+++ b/franske-course-information/modules/itc-2480/pages/lab1.adoc
@@ -65,14 +65,14 @@ NOTE: There are some things special about physical access to a typical computer 
 . Install Debian Linux using the text mode installer
 .. Once the system has rebooted and is back to the "Debian GNU/Linux installer menu" choose "Install" and *not* "Graphical Install". If you make an incorrect choice you can reboot your virtual machine (power off and on) before installing to get back to the menu.
 +
-image::lab01/001.png[Selecting text mode install,200]
+image::lab01/001.png[Selecting text mode install,250,align=left,link=image::lab01/001.png]
 .. In the installer you will use the space bar to select and unselect "checkboxes", the tab key to move between fields and buttons, and the enter key to continue. You will be prompted for the following choices:
 ... Select _English_ as the language, _United States_ as your location, and _American English_ as the keymap.
 ... Set _ens192_ as your primary network interface.
 +
----
+--
 IMPORTANT: The following two steps are critical to future success in labs, check your spelling carefully
----
+--
 ... Set a hostname for the system to 2480 followed by a dash and then your pod ID letter, like _2480-Z_ for LSA Pod Z. Look up at the top of your screen above the line with the "Topology" and "Linux Server" tabs and you should see a line with "LSA Pod" followed by a letter, that letter is your pod ID letter.
 ... Set the domain name to _itc2480.campus.ihitc.net_
 ... Set the root password to something you will *not forget*, this is the main administrator account, _cisco_ could be a good choice for our purposes though that would not be secure for a system directly accessible from the Internet.
@@ -129,7 +129,8 @@ Reading state information... Done
 .. Type `logout` and press enter to log out of the root user account.
 .. Log back in to the system using your standard user account username and password. These were set by you during the installation process.
 . Check the IP address of your virtual machine
-.. Run the `ip address show` command to see what the IP address is on the main network card of your virtual machine, in our case that is the _ens192_ interface which should have an _inet_ address of something like _172.17.50.xxx_. In the example below:
+.. Run the `ip address show` command to see what the IP address is on the main network card of your virtual machine, in our case that is the _ens192_ interface which should have an _inet_ address of something like _172.17.50.xxx_. 
+.. Example output (yours will have different addresses):
 +
 [source]
 ----
@@ -151,8 +152,8 @@ ben@2480-Z:~$ ip address show
     link/ether 00:50:56:a1:ff:25 brd ff:ff:ff:ff:ff:ff
     altname enp19s0
 ----
-The IPv4 address of the system on the _ens192_ interface is 172.17.51.14
-.. Make a note of what your current IP address is as we'll use it in the next section of the lab.
+In this example the IPv4 address of the system on the _ens192_ interface is 172.17.51.14
+.. Make a note of what your own current IP address is as we'll use it in the next section of the lab.
 . Check that sudo administrative permissions are working your standard user account
 .. Run the `whoami` command to see that you are currently logged in with your standard user account.
 .. Run the `sudo whoami` command to see if your user has administrative command privileges to run commands with sudo. If sudo has been setup correctly you should see that when you put sudo in front of the `whoami` command it shows that the command is actually being run by the _root_ user instead of your standard user.
