--- a/README.adoc
+++ b/README.adoc
@@ -1,6 +1,6 @@
 = Inver Hills ITC Department Information Site
 
-This site is designed to eventually replace the https://wiki.ihitc.net[ITC Wiki]. It will slowly gain new information but is not expected to be live until Fall 2022.
+This site is designed to eventually replace the https://wiki.ihitc.net[ITC Wiki]. Information is slowly being migrated from the wiki site to this site.
 
 It is built using Antora with the Lunr search engine and uses the AsciiDoc format for documentation.
 
